# MyBot

./: .gitignore  Dockerfile  LICENSE  QQ_SETUP.md  README.md  bilibili_server.py  bot.py  deploy.sh  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start_bilibili_server.sh  start_mybot.sh  web_server.sh
deployment/: DEPLOYMENT.md  env.web.example  mybot-web.service  nginx_bot.conf
ignored/: exec.py  flag.py
src/plugins/: _data_paths.py  _openclaw_bridge_audio.py  _openclaw_bridge_images.py  _openclaw_bridge_prompts.py  _openclaw_bridge_registry.py  _openclaw_bridge_text.py  bilibili.py  copywriting.py  countdown.py  eat.py  email_notifier.py  help.py  inspire.py  latex.py  openclaw_bridge.py  ops_alert.py  pic.py  ping.py  quote.py  relay.py  remind.py  schedule.py  status.py  summary.py  todo.py  usage.py  weather.py
web/: WEB_README.md  web_api.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx
web/frontend/src/components/: Modal.css  Modal.jsx  Navbar.css  Navbar.jsx  Toast.css  Toast.jsx
web/frontend/src/pages/: Countdowns.css  Countdowns.jsx  Dashboard.css  Dashboard.jsx  Eat.css  Eat.jsx  Images.css  Images.jsx  Reminders.css  Reminders.jsx  Todos.css  Todos.jsx  Usage.css  Usage.jsx
web/frontend/src/services/: api.js
web/frontend/src/styles/: App.css  index.css
web/frontend/src/utils/: helpers.js
web/static/: app.js  index.html  style.css
